_sass/_styles.scss
body {
    font-family: 'Heebo', sans-serif;
    color: $text-color;
}

h1, h2, h3, h4, h5, h6, a {
    color: $primary-color;
}

h1, h2, header.headline {
    border-bottom: 1px solid $gray-light;
}

a {
    text-decoration: none;
    &:hover {
        color: #3081b4;
        text-decoration: underline;
    }
}

small {
    color: #888;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid $gray-light;
    margin: 1em auto;
    padding: 0;
}

header.headline h1 {
    border-bottom: none;
}

header.headline small {
    font-size: 1em;
}

pre {
    margin: 2em 0;
    max-width: 100%;
    overflow-y: scroll;
}

code {
    overflow-wrap: break-word;
}

article.sumup h3 {
    position: relative;
    .bg {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: -1;
        background-size: cover;
        background-position: center;
        filter: blur(2px);
        visibility: hidden;
    }
}

@media (min-width: 43.75em) {
    article.sumup {
        display: flex;
        margin: 0 -1em;
        header, p {
            padding: 0 1em;
        }
        header {
            width: 40%;
        }
        h3 {
            margin: 0;
            overflow: hidden;
            border: 1px solid $gray-light;
            border-radius: 0.2em;
            .bg {
                visibility: visible;
            }
            &:hover {
                border-color: $primary-color;
            }
        }
        header a {
            display: block;
            text-align: right;
            padding: 1em;
            color: #fff;
            background-color: rgba(0, 0, 0, 0.5);
            &:hover {
                text-decoration: none;
            }
        }
        p:first-child {
            margin-top: 0;
        }
    }
}

